# SPIRED-Fitness

./: README.md  pyproject.toml  run_SPIRED-Fitness.py  run_SPIRED-Stab.py  run_SPIRED.py
model/: README.md
scripts/: __init__.py
scripts/esmfold_openfold/: __init__.py
spired/: __init__.py  cli.py  pipeline.py  utils.py  weights.py
